Demos/ingress/azurecommunitylive.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gamingwebapp-ingresscf
  namespace: ingressdemo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: azurecommunitylive.westeurope.cloudapp.azure.com
      http:
        paths:
        - backend:        
            serviceName: gamingwebapp-service
            servicePort: 80
          path: /gaming
