Demos/ingress/gamingwebapp-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gamingwebapp-ingresscf
  namespace: ingressdemo
  annotations:    
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - gaming.resultaatgroep.cf
    secretName: gaming-tls
  rules:
  - host: gaming.resultaatgroep.cf
    http:
      paths:
      - backend:
          serviceName: gamingwebapp-service
          servicePort: 80
