Demos/ingress/intelligentcloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: intelligentcloud-ingresscf
  namespace: ingressdemo
  annotations:        
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gaming.intelligentcloud2019.cf
    http:
      paths:
      - backend:
          serviceName: gamingwebapp-service
          servicePort: 80
  - host: www.intelligentcloud2019.cf
    http:
      paths:
      - backend:
          serviceName: gamingwebapp-service
          servicePort: 80
  - host: intelligentcloud2019.cf
    http:
      paths:
      - backend:
          serviceName: gamingwebapp-service
          servicePort: 80
